@@ -7,6 +7,9 @@ Unreleased
 
 NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart
 
+ - Fix: return correct status for ``GET`` requests on ``/`` REST endpoint
+   when cluster is starting up
+
  - Updated crate-admin to 0.13.2 which includes following changes:
 
     - improved layout for smaller screens
